<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_app_bar_home_fragment">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.android.moviestreamer.ui.movies.MoviesFragment"
        android:label="@string/title_Movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.android.moviestreamer.ui.series.SeriesFragment"
        android:label="@string/title_Series"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_liveTV"
        android:name="com.android.moviestreamer.ui.livetv.LiveTVFragment"
        android:label="@string/title_my_library"
        tools:layout="@layout/fragment_live_tv" />
</navigation>
